# graduate-algorithm-face-mask-detection

./: ._faceMaskDetection_260.onnx  ._faceMaskDetection_260_slime.onnx  .gitignore  CMakeLists.txt  FaceDetector.cpp  cmake_install.cmake
data/: imageList.txt
example/: main.cpp  main_backup.cpp
include/: detector.h  face_detection.h  face_mask_detection.h  jni_detection.h
java/linux/jni/: Runme.java  YCFace.java
model/: faceMask.param  facemask.param
src/: detector.cpp  face_detection.cpp  jni_detection.cpp
